# storycast-seed-agents

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: build-submission-video.yml  ci.yml  generate-storycast.yml
docs/: architecture.md  byteplus-setup.md  demo-runbook.md  demo-script.md  demo.html  fallback-tts.md  index.html  submission-checklist.md  submission-form.md  submission-package.md
storycast/: api.py  cli.py  config.py  ffmpeg.py  models.py  pipeline.py  prompting.py  utils.py
storycast/clients/: __init__.py  elevenlabs_tts.py  modelark.py  seed_speech.py
storycast/web/static/: app.js  styles.css
storycast/web/templates/: index.html
tests/: test_ffmpeg.py  test_models.py  test_utils.py
